corrected alignment and added action column

--- a/src/assets/App.css
+++ b/src/assets/App.css
@@ -41,10 +41,9 @@ body {
   font-size: 14px;
 }
 
-.App {
-  padding-top: 10px;
-  text-align: center;
-}
+/* .App {
+  padding-top: 5px;
+} */
 
 body {
   background-color: #fffcfc;
@@ -55,6 +54,7 @@ body {
 h2 {
   color: #cd1409;
   margin-bottom: 5px;
+  text-align: center;
 }
 
 table {
@@ -142,4 +142,23 @@ button {
 
 .App b {
   color: #cd1409 !important;
+  text-align: none !important;
+  text-align: center;
+  padding: 5px;
+  background: #ddd;
+  border: 1px dashed #666;
+  margin-left: 10px;
+}
+
+.button {
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  background-color: #cd1409;
+  border: none;
+  color: white;
+  padding: 1px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 0.875rem;
+  border-radius: 2px;
 }
